Fix layout issue with media players

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,6 +1,7 @@
 .post {
   margin-top: calc(-1 * var(--spacing-medium));
   display: flex;
+  flex-wrap: wrap;
 }
 .post-content {
   flex: 1;
@@ -186,28 +187,31 @@ h4 {
 /* ---------- IFRAME ELEMENTS ---------- */
 
 .podcast-player {
-  margin-bottom: var(--spacing-xlarge);
-  border: var(--border);
+  margin-top: var(--spacing-large);
   border-radius: var(--roundness);
+  box-shadow: var(--shadow);
   padding: var(--spacing-medium);
-  width: calc(100% - (var(--spacing-medium) * 2) - 8);
+  width: 100%;
   height: 200px;
   overflow: hidden;
+  background-color: var(--background-contrast);
 }
 
 .podcast-player > iframe {
   width: 100%;
   height: 200px;
-  border-radius: 12px;
+  border-radius: calc(var(--roundness) - 10px);
 }
 
 .video-player {
-  margin-bottom: var(--spacing-xlarge);
-  border: var(--border);
+  display: flex;
+  margin-top: var(--spacing-large);
   border-radius: var(--roundness);
+  box-shadow: var(--shadow);
   padding: var(--spacing-medium);
+  background-color: var(--background-contrast);
   overflow: hidden;
-  width: calc(100% - (var(--spacing-medium) * 2) - 8);
+  width: 100%;
   height: auto;
   aspect-ratio: 500 / 315;
 }
@@ -215,5 +219,5 @@ h4 {
 .video-player > iframe {
   width: 100%;
   height: 100%;
-  border-radius: 12px;
+  border-radius: calc(var(--roundness) - 10px);
 }
